# TinyRenderer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README  README.md  build.sh  main  main.cpp  out  text  text.cpp
config/: CMakeLists.txt  saber.cmake
cxx_tools/: run_format.sh  run_tidy.sh
doc/: Euler_angles.md  WSL_GUI.md  quaternions .md  texture.md  性能分析.md
examples/demo/: CMakeLists.txt  main.cpp
examples/demo1/: TrackBallControls_bk.cpp  TrackBallControls_bk.h  TrackBallInteractor_bk.cpp  main.cpp
examples/demo2/: main.cpp
examples/demo3/: bm.vs  main.cpp
examples/demo4/: bm.fs  bm.vs  bm1.fs  main.cpp
examples/demo5/: image.fs  image.vs  main.cpp
examples/demo6/: image.fs  main.cpp
examples/demo7/: image.fs  main.cpp
examples/demo8/: image.vs  main.cpp
examples/demo9/: main.cpp
examples/demo_GLFW/: CMakeLists.txt  main.cpp
examples/demo_file_dialog/: CMakeLists.txt  main.cpp
examples/demo_imgui/: CMakeLists.txt
examples/demo_valgrind/: CMakeLists.txt  main.cpp
examples/demo_yaml/: CMakeLists.txt  main.cpp
miscellanea/: TexCube.vs  TrackBallInteractor_bk.h  anim_model.vs  frame.vs  trangle.vs
resource/config/fonts/freefont/: .uuid
resource/config/icons/: add_icon.png:Zone.Identifier
resource/config/shader/: BRDF_LUT.fs  fbo.fs  fbo.vs  pbr.fs  shader.fs  skybox.fs
resource/config/textures/: 003.jpeg:Zone.Identifier
resource/content/: ModelScene.sa
resource/content/models/: aili_cycle.mtl
resource/content/models/moso/: moshou.fbx
resource/content/textures/wood_pbr/: WoodFloor043_1K-JPG (1).zip:Zone.Identifier
resource/fronts/ubuntu/: .uuid
resource/objects/paimon/: untitled.mtl
resource/objects/paimon/Texture/: untitled.blend
resource/shader/: .pbr.fs.swp  .skybox.fs.swp  BRDF_LUT.fs  BRDF_LUT.vs  TexCube.fs  anim_model.vs  fbo.fs  fbo.vs  frame.fs  hdr2cubemap.fs  hdr2cubemap.vs  irradian.fs  pbr.fs  pbr.vs  prefilter.fs  shader.fs  shader.vs  shadow.fs  shadow.vs  shadow_debug.fs  skybox.fs  skybox.vs  skybox_hdr.fs  skybox_hdr.vs  trangle.fs  trangle.vs
src/: CMakeLists.txt  main.cpp  text.cpp
src/animation/: Animation.hpp  Animator.hpp  AssimToGlm.hpp  Bone.hpp  BoneInfo.hpp  mesh.hpp  model.hpp
src/asset/: .FBO.cpp.swp  .FBO.h.swp  .Shader.cpp.swp  .Texture.cpp.swp  Asset.h  Buffer.cpp  Buffer.h  FBO.cpp  FBO.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h
src/camera/: Camera.cpp  Camera.h  CameraFps.cpp  CameraFps.h  TrackBallControls.cpp  TrackBallControls.h  TrackBallInteractor.cpp  TrackBallInteractor.h
src/component/: .Material.h.swp  Animator.cpp  Animator.h  Camera.cpp  Camera.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Tag.hpp  Transform.cpp  Transform.h
src/core/: App.cpp  App.h  Clock.cpp  Clock.h  Debug.h  Event.cpp  Event.h  Input.cpp  Input.h  Log.cpp  Log.h  PublicSingleton.h  Window.cpp  Window.h  bash.h
src/editor/: ContentBrowerPanel.cpp  ContentBrowerPanel.h  EditorLayer.cpp  EditorLayer.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
src/examples/: .Scene1.hpp.swp  Scene1.hpp
src/frame/: YUVFrame.bk.cpp  YUVFrame.bk.h  YUVFrame.cpp  YUVFrame.h
src/imGui/: ImGuiWrapper.cpp  ImGuiWrapper.h
src/manage/: AssetManage.cpp  AssetManage.h  BaseManage.cpp  BaseManage.h  ConfigManage.cpp  ConfigManage.h
src/model/: Image.cpp  Image.h  Trangle.cpp  Trangle.h
src/render/: TexCubeRender.cpp  TexCubeRender.h
src/scene/: Entity.hpp  Factory.hpp  Render.cpp  Render.h  RenderCommand.cpp  RenderCommand.h  Scene.cpp  Scene.h  SerializeEntity.cpp  SerializeEntity.h  ui.cpp  ui.h
src/system/: EnvironmentSystem.cpp  EnvironmentSystem.h  RenderSystem.cpp  RenderSystem.h  System.cpp  System.h
src/tools/: RenderText.cpp  RenderText.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  TextureCube.cpp  TextureCube.h  front.cpp
src/utils/: File.cpp  File.h  ext.hpp  image.cpp  image.h  math.cpp  math.h
test/: .CMakeLists.txt.swp  CMakeLists.txt  TransformTest.cpp  test.cpp
